feat(seo): improve seo with meta tags, robots.txt, and sitemap

--- a/front/index.html
+++ b/front/index.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DFW Software Consulting</title>
-    <meta name="description" content="DFW Software Consulting — Backend, Frontend, Cloud & AI solutions for SMBs and enterprises." />
+
+    <!-- SEO Meta Tags -->
+    <title>DFW Software Consulting | Custom Website & App Development</title>
+    <meta name="description" content="Affordable, high-quality software solutions from DFW Software Consulting. We specialize in custom website building, app hosting, and full-stack development for businesses of all sizes." />
+    <meta name="keywords" content="dfwsc, dfw software consulting, website building, cheap website hosting, app hosting, custom software development, full-stack development, Dallas Fort Worth" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.dfwsc.com/" />
+    <meta property="og:title" content="DFW Software Consulting | Custom Website & App Development" />
+    <meta property="og:description" content="Affordable, high-quality software solutions from DFW Software Consulting. We specialize in custom website building, app hosting, and full-stack development." />
+    <meta property="og:image" content="https://www.dfwsc.com/dfwsc-logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.dfwsc.com/" />
+    <meta property="twitter:title" content="DFW Software Consulting | Custom Website & App Development" />
+    <meta property="twitter:description" content="Affordable, high-quality software solutions from DFW Software Consulting. We specialize in custom website building, app hosting, and full-stack development." />
+    <meta property="twitter:image" content="https://www.dfwsc.com/dfwsc-logo.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
