FEAT: Update logos, favicon, pricing text, and comment out section
- Replaced existing logos in Navbar and Footer with DFWSC-Logo-HorizWordmarkPNG.png.
- Removed old logo files (dfwsc-logo.png, logo.png).
- Added light blue background and hover scale effect to header and footer logos.
- Configured favicon to use DFWSC-LOGO-CondensedSVG.svg, including viewBox adjustments for clarity.
- Updated the hosting plan description text on the Pricing page.
- Commented out 'across industries' in the Case Studies section.

--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Meta Tags -->
-    <title>DFW Software Consulting | Custom Website & App Development</title>
+    <title>DFWSC</title>
+    <link rel="icon" type="image/svg+xml" href="/DFWSC-LOGO-CondensedSVG.svg" />
     <meta name="description" content="Affordable, high-quality software solutions from DFW Software Consulting. We specialize in custom website building, app hosting, and full-stack development for businesses of all sizes." />
     <meta name="keywords" content="dfwsc, dfw software consulting, website building, cheap website hosting, app hosting, custom software development, full-stack development, Dallas Fort Worth" />
 
@@ -14,14 +15,14 @@
     <meta property="og:url" content="https://www.dfwsc.com/" />
     <meta property="og:title" content="DFW Software Consulting | Custom Website & App Development" />
     <meta property="og:description" content="Affordable, high-quality software solutions from DFW Software Consulting. We specialize in custom website building, app hosting, and full-stack development." />
-    <meta property="og:image" content="https://www.dfwsc.com/dfwsc-logo.png" />
+    <meta property="og:image" content="https://www.dfwsc.com/DFWSC-LogoMainJPG.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.dfwsc.com/" />
     <meta property="twitter:title" content="DFW Software Consulting | Custom Website & App Development" />
     <meta property="twitter:description" content="Affordable, high-quality software solutions from DFW Software Consulting. We specialize in custom website building, app hosting, and full-stack development." />
-    <meta property="twitter:image" content="https://www.dfwsc.com/dfwsc-logo.png" />
+    <meta property="twitter:image" content="https://www.dfwsc.com/DFWSC-LogoMainJPG.jpg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
